tests/compile/declspec-5.c
/**
RUN: %scc %s 2>&1 | filecheck %s
*/

int
main()
{
  // CHECK: error: storage size is not known
  void x;
}